degree to rad math function. VH calculation iOS fix class added to core methods.

--- a/src/scss/commons/_body.scss
+++ b/src/scss/commons/_body.scss
@@ -1,3 +1,7 @@
+html {
+  --vh: 1vh;
+}
+
 html,
 body {
   height: 100%;
